Deprecate sync account methods in favor of asynchronous capable alternatives